refactor: remove reqwest and direct serde usage
